<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hanatra_msgs</name>
  <version>1.0.0</version>
  <description>Custom message definitions for HANATRA robot</description>
  <maintainer email="robotics@hanatra.com">VANGUARD (HANATRA Robotics)</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <member_of_group>rosidl_message_packages</member_of_group>
  <member_of_group>rosidl_service_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
